[package]
name = "ba-ebpf-try1"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# aya = { version = ">=0.11", features=["async_tokio"] }
# aya-log = "0.1"
aya = { git="https://github.com/aya-rs/aya", features=["async_tokio"] }
aya-log = {git="https://github.com/aya-rs/aya"}
clap = { version = "4.1", features = ["derive"] }
ba-ebpf-try1-common = { path = "../ba-ebpf-try1-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }

[[bin]]
name = "ba-ebpf-try1"
path = "src/main.rs"
